# SECAuditAgent

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  DEMO.md  Dockerfile  Presentation.md  README.md  pyproject.toml
.agent/agents/: implementer.md  spec-reviewer.md
.agent/commands/: collate.md  evaluate.md  gather.md  implement.md  plan.md  quiz.md  spec.md  tasks.md
.claude/agents/: implementer.md  spec-reviewer.md
.claude/commands/: collate.md  evaluate.md  gather.md  implement.md  plan.md  quiz.md  spec.md  tasks.md
app/: agent.py  answer.py  duckdb_store.py  evaluate.py  retrieval.py  ui.py  vector_store.py
docs/: architecture.md  constitution.md  roadmap.md
docs/guide/: 00-overview.md  01-data-foundation.md  02-retrieval.md  03-agent.md  04-evaluation.md  05-deployment.md  06-decisions-and-lessons.md  07-stores.md  README.md
docs/presentation/: build_pdf.py  collated-context.md  gathered-context.md  report.md  speaker-cues.md
eval/: baseline.json  last_report.json
reports/: README.md  render.py  requirements.txt
reports/2026-06-04-ingestion-parsing/: 01-clarify.md  02-plan.md  03-tasks.md  04-implement-T1.md  04-implement-T10.md  04-implement-T2.md  04-implement-T3.md  04-implement-T4.md  04-implement-T5.md  04-implement-T6.md  04-implement-T7.md  04-implement-T8.md  04-implement-T9.md
specs/2026-06-04-ingestion-parsing/: plan.md  spec.md  tasks.md
src/config/: __init__.py  logging.py  schema.py  settings.py
src/ingestion/: __init__.py  elements.py  pipeline.py  sections.py  serialize.py  xbrl.py
tests/: conftest.py
tests/unit/: test_chunking.py  test_compute.py  test_contracts_location.py  test_duckdb_store.py  test_elements_provenance.py  test_entity_period.py  test_firewall.py  test_packaging.py  (+8 more)
(+38 files in other folders)
